[project]
name = "selfhealingrag"
version = "0.1.0"
description = "RAG that can auto-evaluate and correct strategy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.0",
    "fastembed>=0.7.4",
    "google-generativeai>=0.3.0",
    "hf-xet>=1.2.0",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "numpy>=2.4.0",
    "pypdf>=6.5.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "python-dotenv>=1.1.0",
]
